--- a/SeriesAnalyzer/SeriesAnalyzer.csproj
+++ b/SeriesAnalyzer/SeriesAnalyzer.csproj
@@ -32,6 +32,8 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup />
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
